CORS, integració API, boto eliminar

--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
@@ -9,25 +9,6 @@
     min-height: 70px;
 }
 
-/* Estats dinàmics */
-.cn-section-tancada {
-    height: 70px !important;
-    overflow: hidden;
-    transition: height 0.3s ease;
-}
-
-.cn-section-buida {
-    background-color: #ffe6e6;
-    border: 2px dashed #ff4444;
-}
-
-.cn-missatge-buit {
-    text-align: center;
-    padding: 20px;
-    color: #666;
-    font-style: italic;
-}
-
 .cn-article-nom-llista-apats {
     display: flex;
     justify-content: center;
@@ -135,7 +116,7 @@
     transform: scale(0.9);
 }
 
-/* Nova columna per als botons (solucionar) */
+/* Nova columna per als botons (s'ha de millorar) */
 .cn-bttn-eliminar {
     background: none;
     border: none;
