--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/LlistaTorns.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/torns-seccio/LlistaTorns.css
@@ -1,368 +1,425 @@
 .cn-section-llista-torns {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border: 2px solid #fff;
-    border-radius: 8px;
-    padding: 0.65em;
-    width: 80%;
-    min-height: 70px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 2px solid #fff;
+  border-radius: 8px;
+  padding: 0.65em;
+  width: 80%;
+  min-height: 70px;
 }
 
 .cn-article-nom-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #369;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    width: 100%;
-    height: 46px;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #369;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  width: 100%;
+  height: 46px;
+  position: relative;
 }
 
 .cn-h3-nom-llista-torns {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .cn-article-llista-torns {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-    min-height: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  min-height: 50px;
 }
 
 .cn-ul-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
 }
 
 .cn-li-update-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 50px;
-    background: #111;
-    border-bottom-right-radius: 8px;
-    visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 50px;
+  background: #111;
+  border-bottom-right-radius: 8px;
+  visibility: hidden;
 }
 
 .cn-li-id-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 10%;
-    height: 50px;
-    background: #222;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 10%;
+  height: 50px;
+  background: #222;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-nom-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 30%;
-    height: 50px;
-    background: #333;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 30%;
+  height: 50px;
+  background: #333;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
 }
 
-.cn-li-aforament-llista-torns{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #444;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    overflow: auto;
+.cn-li-aforament-llista-torns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #444;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-horainici-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #555;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #555;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-horafi-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #666;
-    border-bottom-right-radius: 8px;
-    border-bottom-left-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #666;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-delete-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 50px;
-    background: #777;
-    border-bottom-left-radius: 8px;
-    visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 50px;
+  background: #777;
+  border-bottom-left-radius: 8px;
+  visibility: hidden;
 }
 
 .cn-div-llista-torns {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-    min-height: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  min-height: 50px;
 }
 
 .cn-li-item-update-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 50px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 50px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  gap:10px;
 }
 
 .cn-li-item-id-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 10%;
-    height: 50px;
-    background: #f75;
-    border-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 10%;
+  height: 50px;
+  background: #f75;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-item-nom-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 30%;
-    height: 50px;
-    background: #e75;
-    border-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 30%;
+  height: 50px;
+  background: #e75;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-item-aforament-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #d75;
-    border-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #d75;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-item-horainici-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #c75;
-    border-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #c75;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-item-horafi-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    font-size: 0.8em;
-    width: 15%;
-    height: 50px;
-    background: #b75;
-    border-radius: 8px;
-    overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  font-size: 0.8em;
+  width: 15%;
+  height: 50px;
+  background: #b75;
+  border-radius: 8px;
+  overflow: auto;
 }
 
 .cn-li-item-delete-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 50px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 50px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 
 /* CloseFinestra A- */
 .cn-bttn-finestra-llista-torns {
-    position: absolute;
-    right: 0;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-top-right-radius: 4px;
-    background: #258;
-    color: #fff;
-    cursor: pointer;
-    margin: 4px;
-    width: 38px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-top-right-radius: 4px;
+  background: #258;
+  color: #fff;
+  cursor: pointer;
+  margin: 4px;
+  width: 38px;
 }
 
 .cn-bttn-finestra-llista-torns:hover {
-    background: #b44;
+  background: #b44;
 }
 
 .cn-bttn-finestra-llista-torns:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 /* CloseFinestra -Z */
 
 /* FilterIcona A- */
 .cn-bttn-filtre-llista-torns {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-top-left-radius: 4px;
-    background: #258;
-    color: #fff;
-    cursor: pointer;
-    margin: 4px;
-    width: 38px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-top-left-radius: 4px;
+  background: #258;
+  color: #fff;
+  cursor: pointer;
+  margin: 4px;
+  width: 38px;
 }
 
 .cn-bttn-filtre-llista-torns:hover {
-    background: #b44;
+  background: #b44;
 }
 
 .cn-bttn-filtre-llista-torns:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 /* FilterIcona -Z */
 
 /* UpdateLlapis A- */
 .cn-bttn-update-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-    background: #258;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background: #258;
+  transition: background 0.3s;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
 }
 
 .cn-bttn-update-llista-torns:hover {
-    background: #111;
+  background: #111;
 }
 
 .cn-bttn-update-llista-torns:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 /* UpdateLlapis -Z */
 
 /* DeletePaperera A- */
 .cn-bttn-delete-llista-torns {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    background: #b44;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  background: #b44;
+  transition: background 0.3s;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
 }
 
 .cn-bttn-delete-llista-torns:hover {
-    background: #f44;
+  background: #f44;
 }
 
 .cn-bttn-delete-llista-torns:active {
-    transform: scale(0.9);
+  transform: scale(0.9);
 }
 /* DeletePaperera -Z */
 
 /* Icones A- */
 .content-icon {
-    width: 100%;
-    height: 100%;
-    color: #fff;
+  width: 100%;
+  height: 100%;
+  color: #fff;
 }
 /* Icones -Z */
 
+/* Estil pr als amps inputs del mode edició */
+.input-edit {
+  width: 100%;
+  padding: 0;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+  background: transparent;
+  border-radius: 8px;
+}
+
+/* Estil per a tots els camps en mode edició */
+.llista-torns-editing {
+  background: white;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
+.bttn-guardar {
+  background: #4caf50;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s;
+  height: 100%;
+  width:40%;
+  display: flex;
+}
+
+.bttn-cancelar {
+    background: #f44336;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s;
+    height: 100%;
+    width:40%;
+    display: flex;
+}
+
+.bttn-cancelar:hover {
+  background: #d32f2f;
+
+}
+
+.bttn-guardar:hover {
+  background: #45a049;
+}
+
 @media (max-width: 550px) {
-    .cn-section-llista-torns {
-        overflow: auto;
-    }
+  .cn-section-llista-torns {
+    overflow: auto;
+  }
 }
 
 @media (max-width: 800px) {
-    .cn-section-llista-torns {
-        width: 96%;
-    }
+  .cn-section-llista-torns {
+    width: 96%;
+  }
 
-    .cn-h3-nom-llista-torns {
-        font-size: 1em;
-        overflow: auto;
-    }
+  .cn-h3-nom-llista-torns {
+    font-size: 1em;
+    overflow: auto;
+  }
 }
 
 @media (max-width: 1000px) {
-    .cn-li-id-llista-torns {
-        font-size: 0.6em;
-    }
+  .cn-li-id-llista-torns {
+    font-size: 0.6em;
+  }
 
-    .cn-li-nom-llista-torns {
-        font-size: 0.6em;
-    }
+  .cn-li-nom-llista-torns {
+    font-size: 0.6em;
+  }
 
-    .cn-li-categoria-llista-torns {
-        font-size: 0.6em;
-    }
+  .cn-li-categoria-llista-torns {
+    font-size: 0.6em;
+  }
 
-    .cn-li-descripcio-llista-torns {
-        font-size: 0.6em;
-    }
+  .cn-li-descripcio-llista-torns {
+    font-size: 0.6em;
+  }
 }
