--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/Menus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/Menus.css
@@ -7,13 +7,14 @@
     border-radius: 8px;
     padding: 0.65em;
     width: 80%;
+    background: #fff;
 }
 
 .cn-article-titol-menus {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f80;
+    background: #369;
     color: #fff;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -55,7 +56,7 @@
     align-items: center;
     border: none;
     border-radius: 4px;
-    background: #f80;
+    background: #222;
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
@@ -90,4 +91,72 @@
 
 .cn-dynamic-input-titol-menus:focus {
     outline: 4px double #222;
+}
+
+.cn-article-bttn-span-menus {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 50px;
+}
+
+.cn-span-menu-preu-menus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100%;
+    background: #369;
+    color: #fff;
+    border-radius: 8px;
+    padding: 5px;
+    font-size: 1.2rem;
+}
+
+.cn-bttn-menu-actiu-menus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    background: #d0b;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 5px;
+    font-size: 1.2rem;
+    transition: background 1s ease;
+}
+
+.cn-bttn-menu-actiu-menus:hover {
+    background: #08f;
+}
+
+.cn-bttn-menu-actiu-menus:active {
+    transform: scale(0.9);
+}
+
+.cn-bttn-menu-desactiu-menus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    background: #575;
+    color: #ddd;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 5px;
+    font-size: 1.2rem;
+    transition: background 1s ease;
+}
+
+.cn-bttn-menu-actiu-desmenus:hover {
+    background: #aca;
+}
+
+.cn-bttn-menu-actiu-desmenus:active {
+    transform: scale(0.9);
 }
