--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/apats-seccio/LlistaApats.css
@@ -30,13 +30,14 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    min-height: 50px;
+    min-height: 25px;
 }
 
 .cn-ul-llista-apats {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 1%;
     width: 100%;
     height: 50px;
 }
@@ -45,8 +46,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
-    height: 50px;
+    width: 5%;
+    height: 100%;
     background: #111;
     border-bottom-right-radius: 8px;
     visibility: hidden;
@@ -57,9 +58,9 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
-    width: 20%;
-    height: 50px;
+    font-size: 1.2em;
+    width: 5%;
+    height: 100%;
     background: #222;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -71,9 +72,9 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
-    width: 20%;
-    height: 50px;
+    font-size: 1.2em;
+    width: 35%;
+    height: 100%;
     background: #333;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -85,9 +86,9 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
+    font-size: 1.2em;
     width: 10%;
-    height: 50px;
+    height: 100%;
     background: #444;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -99,9 +100,9 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
+    font-size: 1.2em;
     width: 35%;
-    height: 50px;
+    height: 100%;
     background: #555;
     border-bottom-right-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -113,7 +114,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     background: #666;
     border-bottom-left-radius: 8px;
     visibility: hidden;
@@ -124,54 +125,57 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    min-height: 50px;
+    min-height: 25px;
 }
 
 .cn-li-item-update-llista-apats {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
-    height: 50px;
+    width: 5%;
+    height: 100%;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
 }
 
 .cn-li-item-id-llista-apats {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
-    width: 20%;
-    height: 50px;
-    background: #f75;
+    font-size: 1.2em;
+    width: 5%;
+    height: 100%;
+    background: #fff;
+    color: #000;
     border-radius: 8px;
     overflow: auto;
 }
 
 .cn-li-item-nom-llista-apats {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
-    width: 20%;
-    height: 50px;
-    background: #e75;
+    font-size: 1.2em;
+    width: 35%;
+    height: 100%;
+    background: #fff;
+    color: #000;
     border-radius: 8px;
     overflow: auto;
 }
 
 .cn-li-item-categoria-llista-apats {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 5px;
-    font-size: 0.8em;
+    font-size: 1.2em;
     width: 10%;
-    height: 50px;
-    background: #d75;
+    height: 100%;
+    background: #fff;
+    color: #000;
     border-radius: 8px;
     overflow: auto;
 }
@@ -179,12 +183,13 @@
 .cn-li-item-descripcio-llista-apats {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
-    height: 50px;
-    background: #c75;
+    height: 100%;
+    background: #fff;
+    color: #000;
     border-radius: 8px;
     overflow: auto;
 }
@@ -194,7 +199,7 @@
     justify-content: center;
     align-items: center;
     width: 5%;
-    height: 50px;
+    height: 100%;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 }
@@ -214,6 +219,7 @@
     cursor: pointer;
     margin: 4px;
     width: 38px;
+    height: 38px;
 }
 
 .cn-bttn-finestra-llista-apats:hover {
@@ -317,6 +323,30 @@
 }
 /* DeletePaperera -Z */
 
+.cn-article-filtre-search-llista-apats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+}
+
+.cn-input-filtre-search-llista-apats {
+    display: flex;
+    padding: 5px;
+    width: 80%;
+    height: 40px;
+    border: none;
+    border-radius: 8px;
+    font-size: 1.5rem;
+    background: #fff;
+    color: #222;
+}
+
+.cn-input-filtre-search-llista-apats:focus {
+    outline: 4px solid #222;
+}
+
 /* Icones A- */
 .content-icon {
     width: 100%;
@@ -342,24 +372,6 @@
     }
 }
 
-@media (max-width: 1000px) {
-    .cn-li-id-llista-apats {
-        font-size: 0.6em;
-    }
-
-    .cn-li-nom-llista-apats {
-        font-size: 0.6em;
-    }
-
-    .cn-li-categoria-llista-apats {
-        font-size: 0.6em;
-    }
-
-    .cn-li-descripcio-llista-apats {
-        font-size: 0.6em;
-    }
-}
-
 @media (min-width: 450px) and (max-width: 900px) {
     .cn-select-filtre-categoria-llista-apats {
         width: 60px;
@@ -371,6 +383,142 @@
     .cn-select-filtre-categoria-llista-apats {
         width: 60px;
         font-size: 0.6rem;
+    }
+}
+
+@media (max-width: 380px) {
+    .cn-select-filtre-categoria-llista-apats {
         opacity: 0.5;
+    }
+}
+
+@media (max-width: 1350px) {    
+    .cn-li-id-llista-apats {
+        font-size: 1em;
+    }
+    
+    .cn-li-nom-llista-apats {
+        font-size: 1em;
+    }
+    
+    .cn-li-categoria-llista-apats {
+        font-size: 1em;
+    }
+    
+    .cn-li-descripcio-llista-apats {
+        font-size: 1em;
+    }
+    
+    .cn-li-item-id-llista-apats {
+        justify-content: flex-start;
+        font-size: 1em;
+    }
+    
+    .cn-li-item-nom-llista-apats {
+        justify-content: flex-start;
+        font-size: 1em;
+    }
+    
+    .cn-li-item-categoria-llista-apats {
+        justify-content: flex-start;
+        font-size: 1em;
+    }
+    
+    .cn-li-item-descripcio-llista-apats {
+        align-items: flex-start;
+        font-size: 0.6em;
+    }
+}
+
+@media (max-width: 1150px) {    
+    .cn-li-categoria-llista-apats {
+        font-size: 0.8em;
+    }
+
+    .cn-li-item-categoria-llista-apats {
+        font-size: 0.8em;
+    }
+}
+
+@media (max-width: 950px) {    
+    .cn-li-id-llista-apats {
+        font-size: 0.8em;
+    }
+    
+    .cn-li-nom-llista-apats {
+        font-size: 0.8em;
+    }
+    
+    .cn-li-categoria-llista-apats {
+        font-size: 0.6em;
+    }
+    
+    .cn-li-descripcio-llista-apats {
+        font-size: 0.8em;
+    }
+    
+    .cn-li-item-id-llista-apats {
+        font-size: 0.8em;
+    }
+    
+    .cn-li-item-nom-llista-apats {
+        font-size: 0.8em;
+    }
+    
+    .cn-li-item-categoria-llista-apats {
+        font-size: 0.6em;
+    }
+}
+
+@media (max-width: 650px) {    
+    .cn-li-id-llista-apats {
+        justify-content: flex-start;
+    }
+    
+    .cn-li-categoria-llista-apats {
+        justify-content: flex-start;
+    }
+}
+
+@media (max-width: 550px) {    
+    .cn-ul-llista-apats {
+        height: 25px;
+    }
+
+    .content-icon {
+        width: 75%;
+    }
+
+    .cn-li-id-llista-apats {
+        justify-content: center;
+        font-size: 0.3em;
+    }
+    
+    .cn-li-nom-llista-apats {
+        font-size: 0.3em;
+    }
+    
+    .cn-li-categoria-llista-apats {
+        font-size: 0.1em;
+    }
+    
+    .cn-li-descripcio-llista-apats {
+        font-size: 0.3em;
+    }
+    
+    .cn-li-item-id-llista-apats {
+        font-size: 0.3em;
+    }
+    
+    .cn-li-item-nom-llista-apats {
+        font-size: 0.3em;
+    }
+    
+    .cn-li-item-categoria-llista-apats {
+        font-size: 0.1em;
+    }
+    
+    .cn-li-item-descripcio-llista-apats {
+        font-size: 0.3em;
     }
 }
