--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/ArticleMenus.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/apats/menus-seccio/ArticleMenus.css
@@ -7,13 +7,14 @@
     padding: 0.65em;
     width: 60%;
     min-height: 60px;
+    background: #075;
 }
 
 .cn-primer-article-menus {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #08f;
+    background: #f80;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -25,7 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #0f8;
+    background: #f80;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -37,7 +38,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #044;
+    background: #f80;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     width: 100%;
@@ -55,7 +56,7 @@
     width: 100%;
     height: 40px;
     padding: 5px;
-    background: #ddd;
+    background: #222;
     border-radius: 8px;
 }
 
@@ -63,7 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #08f;
+    background: #f80;
     opacity: 0.8;
     border-radius: 4px;
     width: 100%;
@@ -74,7 +75,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #0f8;
+    background: #f80;
     opacity: 0.8;
     border-radius: 4px;
     width: 100%;
@@ -85,7 +86,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #044;
+    background: #f80;
     opacity: 0.8;
     border-radius: 4px;
     width: 100%;
@@ -102,14 +103,14 @@
     align-items: center;
     border: none;
     border-radius: 4px;
-    background: #f80;
+    background: #222;
     cursor: pointer;
     width: 30px;
     height: 30px;
 }
 
 .cn-bttn-remove-article-menus:hover {
-    background: radial-gradient(#f60, #f40);
+    background: radial-gradient(#bbb, #999);
 }
 
 .cn-bttn-remove-article-menus:active {
