--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/FormCrearUsuari.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/FormCrearUsuari.css
@@ -6,7 +6,7 @@
     border-radius: 8px;
     padding: 0.65em;
     width: 80%;
-    height: 300px;
+    height: 450px;
 }
 
 .cn-article-nom-form-crear-usuari {
@@ -35,9 +35,12 @@
 
 .cn-div-contingut-form-crear-usuari {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
     width: 100%;
-    height: 160px;
+    height: 280px;
 }
 
 .cn-div-txt-select-form-crear-usuari {
@@ -50,7 +53,8 @@
 
 .cn-div-lbl-text-form-crear-usuari {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 5%;
     width: 100%;
     height: 50px;
     position: relative;
@@ -65,13 +69,14 @@
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
-    width: 40%;
+    width: 25%;
     height: 100%;
 }
 
 .cn-div-lbl-select-form-crear-usuari {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 5%;
     width: 100%;
     height: 50px;
     position: relative;
@@ -86,7 +91,7 @@
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
     padding-left: 5px;
-    width: 40%;
+    width: 25%;
     height: 100%;
 }
 
