--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/FormActualitzarUsuaris.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/FormActualitzarUsuaris.css
@@ -70,6 +70,18 @@
     border-color: var(--color-error) !important;
     border-width: 2px;
   }
+  .cn-span-update-llista-usuaris {
+    display: flex;
+    align-items: center;
+    background: #ddd;
+    color: #b44;
+    width: 100%;
+    height: 25px;
+    font-size: 0.6rem;
+    padding-left: 5px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
   
   .error-message {
     color: var(--color-error);
