--- a/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
+++ b/CAMPtina_Frontend/projecte-camptina/src/pagines/usuaris/LlistaUsuaris.css
@@ -58,7 +58,7 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 5%;
     height: 50px;
     background: #222;
     border-bottom-right-radius: 8px;
@@ -72,7 +72,7 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 30%;
     height: 50px;
     background: #333;
     border-bottom-right-radius: 8px;
@@ -139,11 +139,11 @@
 
 .cn-li-item-id-llista-usuaris {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 5%;
     height: 50px;
     background: #f75;
     border-radius: 8px;
@@ -156,7 +156,7 @@
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
-    width: 20%;
+    width: 30%;
     height: 50px;
     background: #e75;
     border-radius: 8px;
@@ -165,7 +165,7 @@
 
 .cn-li-item-categoria-llista-usuaris {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding: 5px;
     font-size: 0.8em;
@@ -179,7 +179,7 @@
 .cn-li-item-descripcio-llista-usuaris {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     padding: 5px;
     font-size: 0.8em;
     width: 35%;
@@ -277,6 +277,18 @@
 .cn-bttn-filtre-llista-usuaris:active {
     transform: scale(0.9);
 }
+.cn-span-update-llista-usuaris {
+    display: flex;
+    align-items: center;
+    background: #ddd;
+    color: #b44;
+    width: 100%;
+    height: 25px;
+    font-size: 0.6rem;
+    padding-left: 5px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
 
 .cn-select-filtre-categoria-llista-usuaris {
     display: none;
@@ -302,8 +314,9 @@
     border-bottom-right-radius: 8px;
     background: #258;
     cursor: pointer;
-    width: 100%;
+    width: 55%;
     height: 100%;
+    margin-right: 0%;
 }
 
 .cn-bttn-update-llista-usuaris:hover {
